--- a/音乐2.1
+++ b/音乐2.1
@@ -16,8 +16,8 @@ local function ApplyRoundedCorners(uiElement, cornerRadius)
     return uiCorner
 end
 
--- 修改点：将高光效果改为紫色辉光效果
-local function ApplyEnhancedShadowEffect(uiElement, isMainFrame)
+-- 高级紫色辉光效果函数 - 替换原来的高光效果
+local function ApplyPurpleGlowEffect(uiElement, isMainFrame)
     -- 基础描边（保持原有半透明效果）
     local baseStroke = Instance.new("UIStroke")
     baseStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
@@ -28,31 +28,31 @@ local function ApplyEnhancedShadowEffect(uiElement, isMainFrame)
 
     -- 仅为mainFrame添加高级紫色辉光效果
     if isMainFrame then
-        -- 内层辉光：深紫色基础
+        -- 第一层：深紫色基础辉光
         local innerGlow = Instance.new("UIStroke")
         innerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        innerGlow.Color = Color3.fromRGB(70, 0, 110)  -- 深紫色
+        innerGlow.Color = Color3.fromRGB(80, 30, 120)  -- 深紫色
         innerGlow.Transparency = 0.7
         innerGlow.Thickness = 4
         innerGlow.Parent = uiElement
         
-        -- 中层辉光：中等紫色
+        -- 第二层：中等紫色辉光
         local midGlow = Instance.new("UIStroke")
         midGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        midGlow.Color = Color3.fromRGB(120, 0, 200)   -- 中紫色
+        midGlow.Color = Color3.fromRGB(120, 50, 180)   -- 中等紫色
         midGlow.Transparency = 0.8
         midGlow.Thickness = 6
         midGlow.Parent = uiElement
         
-        -- 外层辉光：亮紫色外晕
+        -- 第三层：亮紫色外辉光
         local outerGlow = Instance.new("UIStroke")
         outerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        outerGlow.Color = Color3.fromRGB(180, 80, 255)  -- 亮紫色
+        outerGlow.Color = Color3.fromRGB(150, 64, 255)  -- 亮紫色
         outerGlow.Transparency = 0.85
         outerGlow.Thickness = 8
         outerGlow.Parent = uiElement
         
-        -- 存储辉光引用以便后续控制
+        -- 存储辉光引用以便动态控制
         uiElement:SetAttribute("InnerGlow", innerGlow)
         uiElement:SetAttribute("MidGlow", midGlow)
         uiElement:SetAttribute("OuterGlow", outerGlow)
@@ -63,99 +63,70 @@ local function ApplyEnhancedShadowEffect(uiElement, isMainFrame)
     return baseStroke
 end
 
--- 修改点：更新陀螺仪控制器以处理多层辉光效果
-local GyroHighlightController = {
-    Enabled = false,
-    Sensitivity = 0.4,
-    MaxTiltEffect = 0.3,
-    CurrentTilt = Vector2.new(0, 0),
-    TargetTilt = Vector2.new(0, 0)
+-- 辉光效果控制器（简化版，移除陀螺仪相关代码）
+local GlowEffectController = {
+    Enabled = true,
+    Intensity = 1.0,
+    PulseSpeed = 2,
+    PulseIntensity = 0.3
 }
 
-function GyroHighlightController:Initialize()
-    if userInputService.GyroEnabled then
-        self.Enabled = true
-    else
-        self.Enabled = false
-    end
-    return self.Enabled
-end
-
-function GyroHighlightController:GetTiltData()
-    if self.Enabled then
-        local gyroState = userInputService:GetGyroState()
-        if gyroState then
-            return Vector2.new(
-                math.clamp(gyroState.Rotation.X * self.Sensitivity, -1, 1),
-                math.clamp(gyroState.Rotation.Y * self.Sensitivity, -1, 1)
-            )
-        end
-    end
+function GlowEffectController:UpdateGlowEffect(uiElement)
+    if not uiElement or not self.Enabled then return end
     
-    -- 模拟模式：使用鼠标位置
-    local mousePos = userInputService:GetMouseLocation()
-    local screenSize = workspace.CurrentCamera.ViewportSize
-    local center = screenSize / 2
-    local relativePos = (mousePos - center) / center
-    
-    return Vector2.new(relativePos.X, relativePos.Y)
-end
-
--- 修改点：更新辉光效果函数，处理多层辉光
-function GyroHighlightController:UpdateHighlightEffect(uiElement)
-    if not uiElement then return end
-    
-    -- 获取所有辉光层
     local innerGlow = uiElement:GetAttribute("InnerGlow")
     local midGlow = uiElement:GetAttribute("MidGlow")
     local outerGlow = uiElement:GetAttribute("OuterGlow")
     
     if not innerGlow or not midGlow or not outerGlow then return end
     
-    -- 获取倾斜数据并平滑过渡
-    self.TargetTilt = self:GetTiltData()
-    self.CurrentTilt = self.CurrentTilt:Lerp(self.TargetTilt, 0.1)
+    -- 创建脉动效果（呼吸效果）
+    local time = tick()
+    local pulse = math.sin(time * self.PulseSpeed) * self.PulseIntensity
     
-    -- 计算倾斜强度
-    local tiltIntensity = math.abs(self.CurrentTilt.X) + math.abs(self.CurrentTilt.Y)
+    -- 动态调整辉光强度
+    local baseIntensity = self.Intensity
+    local dynamicIntensity = baseIntensity + pulse
     
-    -- 根据倾斜度动态调整多层辉光效果
-    local dynamicFactor = tiltIntensity * self.MaxTiltEffect
+    -- 应用动态效果到各辉光层
+    innerGlow.Transparency = 0.7 - (dynamicIntensity * 0.1)
+    innerGlow.Thickness = 4 + (dynamicIntensity * 1)
     
-    -- 内层辉光调整：变化较小，保持基础效果
-    innerGlow.Transparency = 0.7 - (dynamicFactor * 0.1)
-    innerGlow.Thickness = 4 + (dynamicFactor * 1)
+    midGlow.Transparency = 0.8 - (dynamicIntensity * 0.15)
+    midGlow.Thickness = 6 + (dynamicIntensity * 1.5)
     
-    -- 中层辉光调整：中等变化
-    midGlow.Transparency = 0.8 - (dynamicFactor * 0.15)
-    midGlow.Thickness = 6 + (dynamicFactor * 1.5)
-    
-    -- 外层辉光调整：变化最明显，创造动态感
-    outerGlow.Transparency = 0.85 - (dynamicFactor * 0.2)
-    outerGlow.Thickness = 8 + (dynamicFactor * 2)
+    outerGlow.Transparency = 0.85 - (dynamicIntensity * 0.2)
+    outerGlow.Thickness = 8 + (dynamicIntensity * 2)
 end
-
--- 初始化陀螺仪控制器
-GyroHighlightController:Initialize()
 
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
     screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
-    screenGui.Parent = player.PlayerGui
+    
+    -- 安全设置Parent
+    local success, err = pcall(function()
+        screenGui.Parent = player.PlayerGui
+    end)
+    
+    if not success then
+        warn("将ScreenGui添加到PlayerGui失败: " .. tostring(err))
+        return nil
+    end
 
-    -- 主容器
+    -- 主容器（保持原有颜色不变）
     local mainFrame = Instance.new("Frame")
     mainFrame.Size = UDim2.new(0, 300, 0, 200)
     mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
     mainFrame.AnchorPoint = Vector2.new(0.5, 0.5)
-    mainFrame.BackgroundColor3 = Color3.fromRGB(120, 120, 130)
+    mainFrame.BackgroundColor3 = Color3.fromRGB(120, 120, 130)  -- 保持原有背景色
     mainFrame.BackgroundTransparency = 0
     mainFrame.BorderSizePixel = 0
+    mainFrame.Visible = true
     mainFrame.Parent = screenGui
     
-    -- 主容器渐变效果
+    -- 主容器渐变效果（保持原有渐变）
     local gradient = Instance.new("UIGradient")
     gradient.Color = ColorSequence.new({
         ColorSequenceKeypoint.new(0, Color3.fromRGB(85, 85, 90)),
@@ -165,19 +136,18 @@ local function CreateFullUI()
     gradient.Parent = mainFrame
     
     ApplyRoundedCorners(mainFrame, 12)
-    -- 修改点：应用紫色辉光效果到主框架
-    ApplyEnhancedShadowEffect(mainFrame, true)
+    ApplyPurpleGlowEffect(mainFrame, true)  -- 启用高级紫色辉光效果
 
-    -- 标题栏
+    -- 标题栏（保持原有颜色不变）
     local titleBar = Instance.new("Frame")
     titleBar.Size = UDim2.new(1, -5.1, 0, 30)
     titleBar.Position = UDim2.new(0, 3.5, 0, 2.5)
-    titleBar.BackgroundColor3 = Color3.fromRGB(115, 115, 125)
+    titleBar.BackgroundColor3 = Color3.fromRGB(115, 115, 125)  -- 保持原有颜色
     titleBar.BackgroundTransparency = 0
     titleBar.BorderSizePixel = 0
     titleBar.Parent = mainFrame
     
-    -- 标题栏渐变
+    -- 标题栏渐变（保持原有渐变）
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
         ColorSequenceKeypoint.new(0, Color3.fromRGB(75, 105, 185)),
@@ -187,7 +157,7 @@ local function CreateFullUI()
     titleGradient.Parent = titleBar
     
     ApplyRoundedCorners(titleBar, 8)
-    ApplyEnhancedShadowEffect(titleBar, false)
+    ApplyPurpleGlowEffect(titleBar, false)  -- 标题栏不启用辉光
     
     local titleLabel = Instance.new("TextLabel")
     titleLabel.Size = UDim2.new(1, -45, 1, 0)
@@ -200,7 +170,7 @@ local function CreateFullUI()
     titleLabel.BackgroundTransparency = 1
     titleLabel.Parent = titleBar
 
-    -- 控制按钮
+    -- 控制按钮（保持原有颜色不变）
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
     closeButton.Position = UDim2.new(1, -7, 0.5, -1)
@@ -209,11 +179,11 @@ local function CreateFullUI()
     closeButton.Font = Enum.Font.GothamBold
     closeButton.TextSize = 18
     closeButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)
+    closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)  -- 保持原有红色
     closeButton.BorderSizePixel = 0
     closeButton.Parent = titleBar
     ApplyRoundedCorners(closeButton, 6)
-    ApplyEnhancedShadowEffect(closeButton, false)
+    ApplyPurpleGlowEffect(closeButton, false)
     
     closeButton.MouseButton1Click:Connect(function()
         screenGui:Destroy()
@@ -227,23 +197,23 @@ local function CreateFullUI()
     twinButton.Font = Enum.Font.GothamBold
     twinButton.TextSize = 12
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
-    twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)
+    twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)  -- 保持原有颜色
     twinButton.BorderSizePixel = 0
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
-    ApplyEnhancedShadowEffect(twinButton, false)
+    ApplyPurpleGlowEffect(twinButton, false)
 
-    -- 输入框
+    -- 输入框函数（保持原有颜色不变）
     local function CreateInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
         container.Size = UDim2.new(sizeX, 0, 0, 28)
         container.Position = UDim2.new(posX, 0, posY, 0)
-        container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
+        container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)  -- 保持原有颜色
         container.BorderSizePixel = 0
         container.Parent = mainFrame
         
         ApplyRoundedCorners(container, 6)
-        ApplyEnhancedShadowEffect(container, false)
+        ApplyPurpleGlowEffect(container, false)
         
         local box = Instance.new("TextBox")
         box.Size = UDim2.new(1, -10, 1, -6)
@@ -263,7 +233,7 @@ local function CreateFullUI()
     local volumeBox = CreateInputBox(0.4, "音量 0.1-100", 0.4, 0.05)
     local pitchBox = CreateInputBox(0.4, "音调 0.1-100", 0.4, 0.55)
 
-    -- 功能按钮
+    -- 功能按钮函数（保持原有颜色不变）
     local function CreateStyledButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 32)
@@ -278,10 +248,11 @@ local function CreateFullUI()
         btn.Parent = mainFrame
         
         ApplyRoundedCorners(btn, 8)
-        ApplyEnhancedShadowEffect(btn, false)
+        ApplyPurpleGlowEffect(btn, false)
         return btn
     end
 
+    -- 播放按钮颜色定义（保持原有颜色不变）
     local playButtonDefaultColor = Color3.fromRGB(0, 162, 255)
     local playButtonSuccessColor = Color3.fromRGB(70, 200, 100)
     local playButtonFailureColor = Color3.fromRGB(220, 80, 80)
@@ -289,7 +260,7 @@ local function CreateFullUI()
     local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)
     local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))
 
-    -- 切换按钮
+    -- 切换按钮函数（保持原有颜色不变）
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 24)
@@ -304,14 +275,14 @@ local function CreateFullUI()
         btn.Parent = mainFrame
         
         ApplyRoundedCorners(btn, 6)
-        ApplyEnhancedShadowEffect(btn, false)
+        ApplyPurpleGlowEffect(btn, false)
         return btn
     end
 
     local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
 
-    -- 分隔线
+    -- 分隔线（保持原有颜色不变）
     local separator = Instance.new("Frame")
     separator.Size = UDim2.new(1, -20, 0, 1)
     separator.Position = UDim2.new(0, 10, 0.58, 0)
@@ -323,7 +294,7 @@ local function CreateFullUI()
     mainFrame.Active = true
     mainFrame.Draggable = true
 
-    -- 音频控制系统
+    -- 音频控制系统（完全保持不变）
     local soundSystem = {
         LoopEnabled = true,
         ActiveSounds = {},
@@ -363,7 +334,7 @@ local function CreateFullUI()
     UpdateModeButton()
     UpdateTwinModeButton()
     
-    -- 音乐控制功能
+    -- 音乐控制功能（完全保持不变）
     local function generateEnhancedSoundName(musicID)
         local prefixes = {"EngineSound", "Vehicleengine", "AmbientTrack", "DEV", "EnvironmentSFX"}
         local suffixes = {"System", "suffer", "Manager", "Player", "Source", "Device"}
@@ -498,7 +469,7 @@ local function CreateFullUI()
                EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
     end
     
-    -- 播放控制
+    -- 播放控制（完全保持不变）
     local function handlePlayback()
         local rawMusicID = musicIDBox.Text
         local rawVolume = volumeBox.Text
@@ -551,10 +522,10 @@ local function CreateFullUI()
             Color3.fromRGB(70, 150, 200) or Color3.fromRGB(120, 120, 140)
     end)
 
-    -- 辉光效果更新循环
+    -- 辉光效果更新循环（简化版，移除陀螺仪相关代码）
     local connection
     connection = runService.Heartbeat:Connect(function()
-        GyroHighlightController:UpdateHighlightEffect(mainFrame)
+        GlowEffectController:UpdateGlowEffect(mainFrame)
     end)
 
     -- 清理函数
@@ -564,6 +535,7 @@ local function CreateFullUI()
         end
     end)
 
+    print("✅ 紫色辉光音乐播放器UI已加载！")
     return screenGui
 end
 
@@ -575,5 +547,5 @@ end)
 if not success then
     warn("❌ UI创建失败: " .. tostring(result))
 else
-    print("✅ AC6音乐播放器UI已加载 - 高级紫色辉光效果已启用！")
+    print("🎵 高级紫色辉光音乐播放器已就绪！")
 end
