--- a/音乐2.1
+++ b/音乐2.1
@@ -2,12 +2,8 @@ local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
 local tweenService = game:GetService("TweenService")
-local runService = game:GetService("RunService")
 
--- 等待PlayerGui加载
-if not player:FindFirstChild("PlayerGui") then
-    player:WaitForChild("PlayerGui")
-end
+if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
 -- 添加圆角效果的函数
 local function ApplyRoundedCorners(uiElement, cornerRadius)
@@ -17,117 +13,44 @@ local function ApplyRoundedCorners(uiElement, cornerRadius)
     return uiCorner
 end
 
--- 高级紫色辉光效果函数
-local function ApplyPurpleGlowEffect(uiElement, isMainFrame)
-    -- 基础描边
+-- 修改：将描边效果改为高级紫色辉光效果
+local function ApplyShadowEffect(uiElement)
+    -- 基础描边（保持原有结构，但改为紫色）
     local baseStroke = Instance.new("UIStroke")
     baseStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-    baseStroke.Color = Color3.fromRGB(0, 0, 0)
-    baseStroke.Transparency = 0.8
+    baseStroke.Color = Color3.fromRGB(80, 30, 120)  -- 深紫色
+    baseStroke.Transparency = 0.7  -- 降低透明度使颜色更明显
     baseStroke.Thickness = 2
     baseStroke.Parent = uiElement
-
-    -- 仅为mainFrame添加高级紫色辉光效果
-    if isMainFrame then
-        -- 第一层：深紫色基础辉光
-        local innerGlow = Instance.new("UIStroke")
-        innerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        innerGlow.Color = Color3.fromRGB(80, 30, 120)  -- 深紫色
-        innerGlow.Transparency = 0.7
-        innerGlow.Thickness = 4
-        innerGlow.Parent = uiElement
-        
-        -- 第二层：中等紫色辉光
-        local midGlow = Instance.new("UIStroke")
-        midGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        midGlow.Color = Color3.fromRGB(120, 50, 180)   -- 中等紫色
-        midGlow.Transparency = 0.8
-        midGlow.Thickness = 6
-        midGlow.Parent = uiElement
-        
-        -- 第三层：亮紫色外辉光
-        local outerGlow = Instance.new("UIStroke")
-        outerGlow.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
-        outerGlow.Color = Color3.fromRGB(150, 64, 255)  -- 亮紫色
-        outerGlow.Transparency = 0.85
-        outerGlow.Thickness = 8
-        outerGlow.Parent = uiElement
-        
-        -- 存储辉光引用以便动态控制
-        uiElement:SetAttribute("InnerGlow", innerGlow)
-        uiElement:SetAttribute("MidGlow", midGlow)
-        uiElement:SetAttribute("OuterGlow", outerGlow)
-        
-        return {innerGlow, midGlow, outerGlow}
-    end
+    
+    -- 添加辉光层（高级紫色效果）
+    local glowStroke = Instance.new("UIStroke")
+    glowStroke.ApplyStrokeMode = Enum.ApplyStrokeMode.Border
+    glowStroke.Color = Color3.fromRGB(150, 64, 255)  -- 亮紫色辉光
+    glowStroke.Transparency = 0.8  -- 适当的透明度
+    glowStroke.Thickness = 4  -- 比基础描边稍厚
+    glowStroke.Parent = uiElement
     
     return baseStroke
 end
 
--- 辉光效果控制器
-local GlowEffectController = {
-    Enabled = true,
-    Intensity = 1.0,
-    PulseSpeed = 2,
-    PulseIntensity = 0.3
-}
-
-function GlowEffectController:UpdateGlowEffect(uiElement)
-    if not uiElement or not self.Enabled then return end
-    
-    local innerGlow = uiElement:GetAttribute("InnerGlow")
-    local midGlow = uiElement:GetAttribute("MidGlow")
-    local outerGlow = uiElement:GetAttribute("OuterGlow")
-    
-    if not innerGlow or not midGlow or not outerGlow then return end
-    
-    -- 创建脉动效果
-    local time = tick()
-    local pulse = math.sin(time * self.PulseSpeed) * self.PulseIntensity
-    
-    -- 动态调整辉光强度
-    local baseIntensity = self.Intensity
-    local dynamicIntensity = baseIntensity + pulse
-    
-    -- 应用动态效果到各辉光层
-    innerGlow.Transparency = 0.7 - (dynamicIntensity * 0.1)
-    innerGlow.Thickness = 4 + (dynamicIntensity * 1)
-    
-    midGlow.Transparency = 0.8 - (dynamicIntensity * 0.15)
-    midGlow.Thickness = 6 + (dynamicIntensity * 1.5)
-    
-    outerGlow.Transparency = 0.85 - (dynamicIntensity * 0.2)
-    outerGlow.Thickness = 8 + (dynamicIntensity * 2)
-end
-
 local function CreateFullUI()
-    -- 创建ScreenGui
     local screenGui = Instance.new("ScreenGui")
-    screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
+    screenGui.Name = "TouchUI_"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
-    
-    -- 安全设置Parent
-    local success, err = pcall(function()
-        screenGui.Parent = player.PlayerGui
-    end)
-    
-    if not success then
-        warn("UI父级设置失败: " .. tostring(err))
-        return nil
-    end
+    screenGui.Parent = player.PlayerGui
 
-    -- 主容器
+    -- ==================== 主容器美化 ====================
     local mainFrame = Instance.new("Frame")
-    mainFrame.Size = UDim2.new(0, 320, 0, 220)
-    mainFrame.Position = UDim2.new(0.5, -160, 0.5, -110)
+    mainFrame.Size = UDim2.new(0, 300, 0, 200)
+    mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
     mainFrame.AnchorPoint = Vector2.new(0.5, 0.5)
     mainFrame.BackgroundColor3 = Color3.fromRGB(120, 120, 130)
     mainFrame.BackgroundTransparency = 0
     mainFrame.BorderSizePixel = 0
-    mainFrame.Visible = true
     mainFrame.Parent = screenGui
-
+    
     -- 主容器渐变效果
     local gradient = Instance.new("UIGradient")
     gradient.Color = ColorSequence.new({
@@ -138,27 +61,18 @@ local function CreateFullUI()
     gradient.Parent = mainFrame
     
     ApplyRoundedCorners(mainFrame, 12)
-    ApplyPurpleGlowEffect(mainFrame, true)
-
-    -- 创建内容容器（修复关键：将所有子元素放在这个容器内）
-    local contentContainer = Instance.new("Frame")
-    contentContainer.Size = UDim2.new(1, 0, 1, 0)
-    contentContainer.Position = UDim2.new(0, 0, 0, 0)
-    contentContainer.BackgroundTransparency = 1
-    contentContainer.BorderSizePixel = 0
-    contentContainer.Visible = true
-    contentContainer.Parent = mainFrame
-
-    -- 标题栏
+    ApplyShadowEffect(mainFrame)
+    
+    -- ==================== 标题栏美化 ====================
     local titleBar = Instance.new("Frame")
-    titleBar.Size = UDim2.new(1, -20, 0, 35)
-    titleBar.Position = UDim2.new(0, 10, 0, 10)
+    titleBar.Size = UDim2.new(1, -5.1, 0, 30)
+    titleBar.Position = UDim2.new(0, 3.5, 0, 2.5)
     titleBar.BackgroundColor3 = Color3.fromRGB(115, 115, 125)
     titleBar.BackgroundTransparency = 0
     titleBar.BorderSizePixel = 0
-    titleBar.Visible = true
-    titleBar.Parent = contentContainer
+    titleBar.Parent = mainFrame
     
+    -- 标题栏渐变
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
         ColorSequenceKeypoint.new(0, Color3.fromRGB(75, 105, 185)),
@@ -168,10 +82,10 @@ local function CreateFullUI()
     titleGradient.Parent = titleBar
     
     ApplyRoundedCorners(titleBar, 8)
-    ApplyPurpleGlowEffect(titleBar, false)
+    ApplyShadowEffect(titleBar)
     
     local titleLabel = Instance.new("TextLabel")
-    titleLabel.Size = UDim2.new(1, -50, 1, 0)
+    titleLabel.Size = UDim2.new(1, -45, 1, 0)
     titleLabel.Position = UDim2.new(0, 10, 0, 0)
     titleLabel.Text = "MUSIC PLAYER♪[made by余客]"
     titleLabel.TextColor3 = Color3.fromRGB(255, 255, 255)
@@ -179,13 +93,12 @@ local function CreateFullUI()
     titleLabel.Font = Enum.Font.GothamBold
     titleLabel.TextXAlignment = Enum.TextXAlignment.Left
     titleLabel.BackgroundTransparency = 1
-    titleLabel.Visible = true
     titleLabel.Parent = titleBar
 
-    -- 控制按钮
+    -- ==================== 控制按钮美化 ====================
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
-    closeButton.Position = UDim2.new(1, -30, 0.5, 0)
+    closeButton.Position = UDim2.new(1, -7, 0.5, -1)
     closeButton.AnchorPoint = Vector2.new(1, 0.5)
     closeButton.Text = "×"
     closeButton.Font = Enum.Font.GothamBold
@@ -193,10 +106,9 @@ local function CreateFullUI()
     closeButton.TextColor3 = Color3.fromRGB(255, 255, 255)
     closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)
     closeButton.BorderSizePixel = 0
-    closeButton.Visible = true
     closeButton.Parent = titleBar
     ApplyRoundedCorners(closeButton, 6)
-    ApplyPurpleGlowEffect(closeButton, false)
+    ApplyShadowEffect(closeButton)
     
     closeButton.MouseButton1Click:Connect(function()
         screenGui:Destroy()
@@ -204,7 +116,7 @@ local function CreateFullUI()
 
     local twinButton = Instance.new("TextButton")
     twinButton.Size = UDim2.new(0, 25, 0, 25)
-    twinButton.Position = UDim2.new(1, -60, 0.5, 0)
+    twinButton.Position = UDim2.new(1, -35, 0.5, -1)
     twinButton.AnchorPoint = Vector2.new(1, 0.5)
     twinButton.Text = "M"
     twinButton.Font = Enum.Font.GothamBold
@@ -212,23 +124,29 @@ local function CreateFullUI()
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
     twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)
     twinButton.BorderSizePixel = 0
-    twinButton.Visible = true
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
-    ApplyPurpleGlowEffect(twinButton, false)
+    ApplyShadowEffect(twinButton)
 
-    -- 输入框函数
+    -- ==================== 输入框美化 ====================
     local function CreateInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
-        container.Size = UDim2.new(sizeX, 0, 0, 30)
+        container.Size = UDim2.new(sizeX, 0, 0, 28)
         container.Position = UDim2.new(posX, 0, posY, 0)
         container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
         container.BorderSizePixel = 0
-        container.Visible = true
-        container.Parent = contentContainer
+        container.Parent = mainFrame
+        
+        -- 输入框渐变背景
+        local inputGradient = Instance.new("UIGradient")
+        inputGradient.Color = ColorSequence.new({
+            ColorSequenceKeypoint.new(0, Color3.fromRGB(60, 60, 75)),
+            ColorSequenceKeypoint.new(1, Color3.fromRGB(45, 45, 60))
+        })
+        inputGradient.Parent = container
         
         ApplyRoundedCorners(container, 6)
-        ApplyPurpleGlowEffect(container, false)
+        ApplyShadowEffect(container)
         
         local box = Instance.new("TextBox")
         box.Size = UDim2.new(1, -10, 1, -6)
@@ -239,22 +157,19 @@ local function CreateFullUI()
         box.Font = Enum.Font.Gotham
         box.TextSize = 12
         box.PlaceholderColor3 = Color3.fromRGB(180, 180, 200)
-        box.Text = ""
-        box.Visible = true
         box.Parent = container
         
         return box
     end
 
-    -- 创建输入框
     local musicIDBox = CreateInputBox(0.2, "输入音乐ID...", 0.9, 0.05)
-    local volumeBox = CreateInputBox(0.45, "音量 0.1-100", 0.4, 0.05)
-    local pitchBox = CreateInputBox(0.45, "音调 0.1-100", 0.4, 0.55)
+    local volumeBox = CreateInputBox(0.4, "音量 0.1-100", 0.4, 0.05)
+    local pitchBox = CreateInputBox(0.4, "音调 0.1-100", 0.4, 0.55)
 
-    -- 功能按钮函数
+    -- ==================== 功能按钮美化 ====================
     local function CreateStyledButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
-        btn.Size = UDim2.new(sizeX, 0, 0, 35)
+        btn.Size = UDim2.new(sizeX, 0, 0, 32)
         btn.Position = UDim2.new(posX, 0, posY, 0)
         btn.Text = text
         btn.Font = Enum.Font.GothamSemibold
@@ -263,25 +178,42 @@ local function CreateFullUI()
         btn.BackgroundColor3 = color
         btn.AutoButtonColor = true
         btn.BorderSizePixel = 0
-        btn.Visible = true
-        btn.Parent = contentContainer
+        btn.Parent = mainFrame
+        
+        -- 按钮悬停效果
+        btn.MouseEnter:Connect(function()
+            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = Color3.fromRGB(
+                math.min(color.R * 255 + 15, 255),
+                math.min(color.G * 255 + 15, 255),
+                math.min(color.B * 255 + 15, 255)
+            )})
+            tween:Play()
+        end)
+        
+        btn.MouseLeave:Connect(function()
+            local tweenInfo = TweenInfo.new(0.2, Enum.EasingStyle.Quad, Enum.EasingDirection.Out)
+            local tween = tweenService:Create(btn, tweenInfo, {BackgroundColor3 = color})
+            tween:Play()
+        end)
         
         ApplyRoundedCorners(btn, 8)
-        ApplyPurpleGlowEffect(btn, false)
+        ApplyShadowEffect(btn)
         return btn
     end
 
+    -- 播放按钮颜色定义
     local playButtonDefaultColor = Color3.fromRGB(0, 162, 255)
     local playButtonSuccessColor = Color3.fromRGB(70, 200, 100)
     local playButtonFailureColor = Color3.fromRGB(220, 80, 80)
     
-    local playButton = CreateStyledButton("播放", 0.05, 0.7, 0.4, playButtonDefaultColor)
-    local stopButton = CreateStyledButton("停止", 0.55, 0.7, 0.4, Color3.fromRGB(220, 80, 80))
+    local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)
+    local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))
 
-    -- 切换按钮函数
+    -- ==================== 切换按钮美化 ====================
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
-        btn.Size = UDim2.new(sizeX, 0, 0, 25)
+        btn.Size = UDim2.new(sizeX, 0, 0, 24)
         btn.Position = UDim2.new(posX, 0, posY, 0)
         btn.Text = text
         btn.Font = Enum.Font.Gotham
@@ -290,31 +222,29 @@ local function CreateFullUI()
         btn.BackgroundColor3 = color
         btn.AutoButtonColor = true
         btn.BorderSizePixel = 0
-        btn.Visible = true
-        btn.Parent = contentContainer
+        btn.Parent = mainFrame
         
         ApplyRoundedCorners(btn, 6)
-        ApplyPurpleGlowEffect(btn, false)
+        ApplyShadowEffect(btn)
         return btn
     end
 
     local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
 
-    -- 分隔线
+    -- ==================== 添加分隔线 ====================
     local separator = Instance.new("Frame")
     separator.Size = UDim2.new(1, -20, 0, 1)
-    separator.Position = UDim2.new(0, 10, 0.65, 0)
+    separator.Position = UDim2.new(0, 10, 0.58, 0)
     separator.BackgroundColor3 = Color3.fromRGB(70, 70, 90)
     separator.BorderSizePixel = 0
-    separator.Visible = true
-    separator.Parent = contentContainer
+    separator.Parent = mainFrame
 
-    -- 拖动系统
+    -- ==================== 拖动系统 ====================
     mainFrame.Active = true
     mainFrame.Draggable = true
 
-    -- 音频控制系统（保持不变）
+    -- ==================== 音频控制系统 ====================
     local soundSystem = {
         LoopEnabled = true,
         ActiveSounds = {},
@@ -327,7 +257,14 @@ local function CreateFullUI()
             mode2 = Color3.fromRGB(220, 140, 100)
         },
         LastSoundName = nil,
-        TwinMode = false
+        TwinMode = false,
+        
+        -- 新增：防护增强系统配置
+        ProtectionConfig = {
+            Enabled = true,
+            DelayRange = {100, 500}, -- 毫秒
+            SoundNameStrategies = {"natural", "random", "idbased"}
+        }
     }
     
     local function UpdateModeButton()
@@ -354,24 +291,33 @@ local function CreateFullUI()
     UpdateModeButton()
     UpdateTwinModeButton()
     
-    -- 音乐控制功能（保持不变）
+    -- ==================== 增强的音乐控制功能 ====================
+    
+    -- 1. 参数伪装：增强的声音名称生成系统（防止模式检测）
     local function generateEnhancedSoundName(musicID)
         local prefixes = {"EngineSound", "Vehicleengine", "AmbientTrack", "DEV", "EnvironmentSFX"}
         local suffixes = {"System", "suffer", "Manager", "Player", "Source", "Device"}
         local numbers = {"001", "02", "3", "004", "5"}
         return prefixes[math.random(#prefixes)].."_"..suffixes[math.random(#suffixes)].."_"..numbers[math.random(#numbers)]
     end
-
+    
+    -- 参数验证与清理函数
     local function ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
-        local musicID = tostring(rawMusicID):gsub("%D+", "")
+        -- 清理音乐ID格式
+        musicID = tostring(rawMusicID):gsub("%D+", "")
+        
+        -- 严格长度检查
         if #musicID < 6 then
-            return nil, nil, nil
+            return nil
         end
-        local volume = tonumber(rawVolume) or 1
-        local pitch = tonumber(rawPitch) or 1
-        return musicID, math.clamp(volume, 0.1, 100), math.clamp(pitch, 0.1, 100)
+        
+        -- 使用原始默认值（音量1，音调1）
+        volume = tonumber(rawVolume) or 1
+        pitch = tonumber(rawPitch) or 1
+        
+        return musicID, volume, pitch
     end
-
+    
     local function SafeStopSound(soundID)
         local stopped = false
         for _, location in ipairs({workspace, replicatedStorage}) do
@@ -403,6 +349,7 @@ local function CreateFullUI()
         soundSystem.LastSoundName = nil
     end
 
+    -- 增强的播放模式（集成防护措施）
     local function EnhancedMode1_Play(musicID, volume, pitch, loopEnabled)
         if soundSystem.RemoteEvent and not soundSystem.RemoteEvent:IsDescendantOf(game) then
             soundSystem.RemoteEvent = nil
@@ -426,9 +373,11 @@ local function CreateFullUI()
         end
         
         local soundName = generateEnhancedSoundName(musicID)
+        
         local success = pcall(function()
             soundSystem.RemoteEvent:FireServer("newSound", soundName, workspace, 
                               "rbxassetid://"..musicID, pitch, volume, loopEnabled)
+            
             soundSystem.RemoteEvent:FireServer("playSound", soundName)
         end)
         
@@ -442,6 +391,7 @@ local function CreateFullUI()
         end
     end
 
+    -- 修改后的遍历模式（M模式）- 移除随机延迟和停止机制
     local function EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
         local soundName = generateEnhancedSoundName(musicID)
         local playedSuccessfully = false
@@ -460,6 +410,7 @@ local function CreateFullUI()
             return false 
         end
         
+        -- 随机打乱远程事件顺序
         for i = #remoteEvents, 2, -1 do
             local j = math.random(i)
             remoteEvents[i], remoteEvents[j] = remoteEvents[j], remoteEvents[i]
@@ -469,10 +420,13 @@ local function CreateFullUI()
             local success = pcall(function()
                 remote:FireServer("newSound", soundName, workspace, 
                                   "rbxassetid://"..musicID, pitch, volume, loopEnabled)
+                
                 remote:FireServer("playSound", soundName)
             end)
+            
             if success then
                 playedSuccessfully = true
+                
                 if not soundSystem.TwinMode then break end
             end
         end
@@ -489,13 +443,15 @@ local function CreateFullUI()
                EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
     end
     
-    -- 播放控制
+    -- ==================== 播放按钮状态反馈系统 ====================
     local function handlePlayback()
         local rawMusicID = musicIDBox.Text
         local rawVolume = volumeBox.Text
         local rawPitch = pitchBox.Text
         
         local musicID, volume, pitch = ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
+        
+        -- 如果音乐ID无效，直接触发失败状态
         if not musicID then
             playButton.BackgroundColor3 = playButtonFailureColor
             task.delay(0.5, function()
@@ -513,12 +469,14 @@ local function CreateFullUI()
             success = EnhancedAutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
         end
         
+        -- 播放按钮状态颜色反馈
         if success then
             playButton.BackgroundColor3 = playButtonSuccessColor
         else
             playButton.BackgroundColor3 = playButtonFailureColor
         end
         
+        -- 0.5秒后恢复默认颜色
         task.delay(0.5, function()
             playButton.BackgroundColor3 = playButtonDefaultColor
         end)
@@ -534,7 +492,6 @@ local function CreateFullUI()
     
     playButton.MouseButton1Click:Connect(handlePlayback)
     stopButton.MouseButton1Click:Connect(handleStop)
-    
     loopToggle.MouseButton1Click:Connect(function()
         soundSystem.LoopEnabled = not soundSystem.LoopEnabled
         loopToggle.Text = soundSystem.LoopEnabled and "循环: ON" or "循环: OFF"
@@ -542,25 +499,10 @@ local function CreateFullUI()
             Color3.fromRGB(70, 150, 200) or Color3.fromRGB(120, 120, 140)
     end)
 
-    -- 辉光效果更新循环
-    local connection
-    connection = runService.Heartbeat:Connect(function()
-        GlowEffectController:UpdateGlowEffect(mainFrame)
-    end)
-
-    -- 清理函数
-    screenGui.Destroying:Connect(function()
-        if connection then
-            connection:Disconnect()
-        end
-    end)
-
-    print("✅ 紫色辉光音乐播放器UI已加载！")
     return screenGui
 end
 
 -- 安全执行UI创建
-print("🚀 开始创建UI...")
 local success, result = pcall(function()
     return CreateFullUI()
 end)
@@ -568,5 +510,5 @@ end)
 if not success then
     warn("❌ UI创建失败: " .. tostring(result))
 else
-    print("🎵 高级紫色辉光音乐播放器已就绪！")
+    print("✅ AC6音乐播放器UI已加载 - 紫色辉光效果已启用！")
 end
