--- a/音乐2.1
+++ b/音乐2.1
@@ -49,11 +49,6 @@ local function ApplyEnhancedGlowEffect(uiElement, elementType)
         outerGlow.Thickness = 7  -- 减小厚度
         outerGlow.Parent = uiElement
         
-        -- 存储辉光引用以便动态控制
-        uiElement:SetAttribute("InnerGlow", innerGlow)
-        uiElement:SetAttribute("MidGlow", midGlow)
-        uiElement:SetAttribute("OuterGlow", outerGlow)
-        
         return {innerGlow, midGlow, outerGlow}
     else
         -- 内部元素（输入框、按钮等）：单层薄辉光
@@ -64,55 +59,29 @@ local function ApplyEnhancedGlowEffect(uiElement, elementType)
         elementGlow.Thickness = 1.5  -- 显著减小内部元素辉光厚度
         elementGlow.Parent = uiElement
         
-        uiElement:SetAttribute("ElementGlow", elementGlow)
         return elementGlow
     end
 end
 
--- 辉光效果控制器（优化版）
-local GlowEffectController = {
-    Enabled = true,
-    Intensity = 0.8,  -- 降低整体强度
-    PulseSpeed = 1.5,  -- 减慢脉动速度
-    PulseIntensity = 0.2  -- 减小脉动强度
-}
-
-function GlowEffectController:UpdateGlowEffect(uiElement)
-    if not uiElement or not self.Enabled then return end
-    
-    -- 主框架辉光效果
-    local innerGlow = uiElement:GetAttribute("InnerGlow")
-    local midGlow = uiElement:GetAttribute("MidGlow")
-    local outerGlow = uiElement:GetAttribute("OuterGlow")
-    
-    if innerGlow and midGlow and outerGlow then
-        -- 创建更温和的脉动效果
-        local time = tick()
-        local pulse = math.sin(time * self.PulseSpeed) * self.PulseIntensity
-        
-        -- 动态调整辉光强度（更细微的变化）
-        local dynamicIntensity = self.Intensity + pulse
-        
-        -- 应用更细腻的动态效果
-        innerGlow.Transparency = 0.75 - (dynamicIntensity * 0.08)
-        innerGlow.Thickness = 3 + (dynamicIntensity * 0.5)
-        
-        midGlow.Transparency = 0.82 - (dynamicIntensity * 0.12)
-        midGlow.Thickness = 5 + (dynamicIntensity * 0.8)
-        
-        outerGlow.Transparency = 0.88 - (dynamicIntensity * 0.15)
-        outerGlow.Thickness = 7 + (dynamicIntensity * 1)
-    end
-end
-
 local function CreateFullUI()
+    -- 创建ScreenGui
     local screenGui = Instance.new("ScreenGui")
     screenGui.Name = "TouchUI_"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
-    screenGui.Parent = player.PlayerGui
+    screenGui.Enabled = true -- 确保启用
 
-    -- ==================== 主容器美化 ====================
+    -- 安全设置Parent
+    local success, err = pcall(function()
+        screenGui.Parent = player.PlayerGui
+    end)
+    
+    if not success then
+        warn("UI父级设置失败: " .. tostring(err))
+        return nil
+    end
+
+    -- 主容器
     local mainFrame = Instance.new("Frame")
     mainFrame.Size = UDim2.new(0, 300, 0, 200)
     mainFrame.Position = UDim2.new(0.5, -150, 0.5, -100)
@@ -120,6 +89,7 @@ local function CreateFullUI()
     mainFrame.BackgroundColor3 = Color3.fromRGB(120, 120, 130)
     mainFrame.BackgroundTransparency = 0
     mainFrame.BorderSizePixel = 0
+    mainFrame.Visible = true -- 显式设置可见
     mainFrame.Parent = screenGui
     
     -- 主容器渐变效果
@@ -132,18 +102,18 @@ local function CreateFullUI()
     gradient.Parent = mainFrame
     
     ApplyRoundedCorners(mainFrame, 12)
-    ApplyEnhancedGlowEffect(mainFrame, "mainFrame")  -- 主框架使用三层辉光
-    
-    -- ==================== 标题栏美化 ====================
+    ApplyEnhancedGlowEffect(mainFrame, "mainFrame")
+
+    -- 标题栏
     local titleBar = Instance.new("Frame")
-    titleBar.Size = UDim2.new(1, -5.1, 0, 30)
-    titleBar.Position = UDim2.new(0, 3.5, 0, 2.5)
+    titleBar.Size = UDim2.new(1, -10, 0, 30) -- 修复尺寸计算
+    titleBar.Position = UDim2.new(0, 5, 0, 5) -- 修复位置
     titleBar.BackgroundColor3 = Color3.fromRGB(115, 115, 125)
     titleBar.BackgroundTransparency = 0
     titleBar.BorderSizePixel = 0
-    titleBar.Parent = mainFrame
+    titleBar.Visible = true
+    titleBar.Parent = mainFrame -- 关键修复：确保Parent正确设置
     
-    -- 标题栏渐变
     local titleGradient = Instance.new("UIGradient")
     titleGradient.Color = ColorSequence.new({
         ColorSequenceKeypoint.new(0, Color3.fromRGB(75, 105, 185)),
@@ -153,7 +123,7 @@ local function CreateFullUI()
     titleGradient.Parent = titleBar
     
     ApplyRoundedCorners(titleBar, 8)
-    ApplyEnhancedGlowEffect(titleBar, "element")  -- 内部元素使用薄辉光
+    ApplyEnhancedGlowEffect(titleBar, "element")
     
     local titleLabel = Instance.new("TextLabel")
     titleLabel.Size = UDim2.new(1, -45, 1, 0)
@@ -164,12 +134,13 @@ local function CreateFullUI()
     titleLabel.Font = Enum.Font.GothamBold
     titleLabel.TextXAlignment = Enum.TextXAlignment.Left
     titleLabel.BackgroundTransparency = 1
+    titleLabel.Visible = true
     titleLabel.Parent = titleBar
 
-    -- ==================== 控制按钮美化 ====================
+    -- 控制按钮
     local closeButton = Instance.new("TextButton")
     closeButton.Size = UDim2.new(0, 25, 0, 25)
-    closeButton.Position = UDim2.new(1, -7, 0.5, -1)
+    closeButton.Position = UDim2.new(1, -30, 0.5, -12.5) -- 修复定位
     closeButton.AnchorPoint = Vector2.new(1, 0.5)
     closeButton.Text = "×"
     closeButton.Font = Enum.Font.GothamBold
@@ -177,9 +148,10 @@ local function CreateFullUI()
     closeButton.TextColor3 = Color3.fromRGB(255, 255, 255)
     closeButton.BackgroundColor3 = Color3.fromRGB(220, 80, 80)
     closeButton.BorderSizePixel = 0
+    closeButton.Visible = true
     closeButton.Parent = titleBar
     ApplyRoundedCorners(closeButton, 6)
-    ApplyEnhancedGlowEffect(closeButton, "element")  -- 薄辉光
+    ApplyEnhancedGlowEffect(closeButton, "element")
     
     closeButton.MouseButton1Click:Connect(function()
         screenGui:Destroy()
@@ -187,7 +159,7 @@ local function CreateFullUI()
 
     local twinButton = Instance.new("TextButton")
     twinButton.Size = UDim2.new(0, 25, 0, 25)
-    twinButton.Position = UDim2.new(1, -35, 0.5, -1)
+    twinButton.Position = UDim2.new(1, -60, 0.5, -12.5)
     twinButton.AnchorPoint = Vector2.new(1, 0.5)
     twinButton.Text = "M"
     twinButton.Font = Enum.Font.GothamBold
@@ -195,29 +167,23 @@ local function CreateFullUI()
     twinButton.TextColor3 = Color3.fromRGB(255, 255, 255)
     twinButton.BackgroundColor3 = Color3.fromRGB(100, 100, 180)
     twinButton.BorderSizePixel = 0
+    twinButton.Visible = true
     twinButton.Parent = titleBar
     ApplyRoundedCorners(twinButton, 6)
-    ApplyEnhancedGlowEffect(twinButton, "element")  -- 薄辉光
+    ApplyEnhancedGlowEffect(twinButton, "element")
 
-    -- ==================== 输入框美化 ====================
+    -- 输入框函数
     local function CreateInputBox(posY, placeholder, sizeX, posX)
         local container = Instance.new("Frame")
         container.Size = UDim2.new(sizeX, 0, 0, 28)
         container.Position = UDim2.new(posX, 0, posY, 0)
         container.BackgroundColor3 = Color3.fromRGB(50, 50, 65)
         container.BorderSizePixel = 0
-        container.Parent = mainFrame
-        
-        -- 输入框渐变背景
-        local inputGradient = Instance.new("UIGradient")
-        inputGradient.Color = ColorSequence.new({
-            ColorSequenceKeypoint.new(0, Color3.fromRGB(60, 60, 75)),
-            ColorSequenceKeypoint.new(1, Color3.fromRGB(45, 45, 60))
-        })
-        inputGradient.Parent = container
+        container.Visible = true
+        container.Parent = mainFrame -- 关键修复：确保Parent正确设置
         
         ApplyRoundedCorners(container, 6)
-        ApplyEnhancedGlowEffect(container, "element")  -- 薄辉光
+        ApplyEnhancedGlowEffect(container, "element")
         
         local box = Instance.new("TextBox")
         box.Size = UDim2.new(1, -10, 1, -6)
@@ -228,16 +194,19 @@ local function CreateFullUI()
         box.Font = Enum.Font.Gotham
         box.TextSize = 12
         box.PlaceholderColor3 = Color3.fromRGB(180, 180, 200)
+        box.Text = ""
+        box.Visible = true
         box.Parent = container
         
         return box
     end
 
+    -- 创建输入框
     local musicIDBox = CreateInputBox(0.2, "输入音乐ID...", 0.9, 0.05)
     local volumeBox = CreateInputBox(0.4, "音量 0.1-100", 0.4, 0.05)
     local pitchBox = CreateInputBox(0.4, "音调 0.1-100", 0.4, 0.55)
 
-    -- ==================== 功能按钮美化 ====================
+    -- 功能按钮函数
     local function CreateStyledButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 32)
@@ -249,7 +218,8 @@ local function CreateFullUI()
         btn.BackgroundColor3 = color
         btn.AutoButtonColor = true
         btn.BorderSizePixel = 0
-        btn.Parent = mainFrame
+        btn.Visible = true
+        btn.Parent = mainFrame -- 关键修复：确保Parent正确设置
         
         -- 按钮悬停效果
         btn.MouseEnter:Connect(function()
@@ -269,11 +239,10 @@ local function CreateFullUI()
         end)
         
         ApplyRoundedCorners(btn, 8)
-        ApplyEnhancedGlowEffect(btn, "element")  -- 薄辉光
+        ApplyEnhancedGlowEffect(btn, "element")
         return btn
     end
 
-    -- 播放按钮颜色定义
     local playButtonDefaultColor = Color3.fromRGB(0, 162, 255)
     local playButtonSuccessColor = Color3.fromRGB(70, 200, 100)
     local playButtonFailureColor = Color3.fromRGB(220, 80, 80)
@@ -281,7 +250,7 @@ local function CreateFullUI()
     local playButton = CreateStyledButton("播放", 0.05, 0.65, 0.4, playButtonDefaultColor)
     local stopButton = CreateStyledButton("停止", 0.55, 0.65, 0.4, Color3.fromRGB(220, 80, 80))
 
-    -- ==================== 切换按钮美化 ====================
+    -- 切换按钮函数
     local function CreateToggleButton(text, posX, posY, sizeX, color)
         local btn = Instance.new("TextButton")
         btn.Size = UDim2.new(sizeX, 0, 0, 24)
@@ -293,29 +262,31 @@ local function CreateFullUI()
         btn.BackgroundColor3 = color
         btn.AutoButtonColor = true
         btn.BorderSizePixel = 0
-        btn.Parent = mainFrame
+        btn.Visible = true
+        btn.Parent = mainFrame -- 关键修复：确保Parent正确设置
         
         ApplyRoundedCorners(btn, 6)
-        ApplyEnhancedGlowEffect(btn, "element")  -- 薄辉光
+        ApplyEnhancedGlowEffect(btn, "element")
         return btn
     end
 
     local loopToggle = CreateToggleButton("循环: ON", 0.55, 0.85, 0.4, Color3.fromRGB(70, 150, 200))
     local modeButton = CreateToggleButton("智能模式", 0.05, 0.85, 0.4, Color3.fromRGB(150, 100, 220))
 
-    -- ==================== 添加分隔线 ====================
+    -- 分隔线
     local separator = Instance.new("Frame")
     separator.Size = UDim2.new(1, -20, 0, 1)
     separator.Position = UDim2.new(0, 10, 0.58, 0)
     separator.BackgroundColor3 = Color3.fromRGB(70, 70, 90)
     separator.BorderSizePixel = 0
-    separator.Parent = mainFrame
+    separator.Visible = true
+    separator.Parent = mainFrame -- 关键修复：确保Parent正确设置
 
-    -- ==================== 拖动系统 ====================
+    -- 拖动系统
     mainFrame.Active = true
     mainFrame.Draggable = true
 
-    -- ==================== 音频控制系统 ====================
+    -- 音频控制系统（保持不变）
     local soundSystem = {
         LoopEnabled = true,
         ActiveSounds = {},
@@ -328,14 +299,7 @@ local function CreateFullUI()
             mode2 = Color3.fromRGB(220, 140, 100)
         },
         LastSoundName = nil,
-        TwinMode = false,
-        
-        -- 新增：防护增强系统配置
-        ProtectionConfig = {
-            Enabled = true,
-            DelayRange = {100, 500}, -- 毫秒
-            SoundNameStrategies = {"natural", "random", "idbased"}
-        }
+        TwinMode = false
     }
     
     local function UpdateModeButton()
@@ -362,33 +326,24 @@ local function CreateFullUI()
     UpdateModeButton()
     UpdateTwinModeButton()
     
-    -- ==================== 增强的音乐控制功能 ====================
-    
-    -- 1. 参数伪装：增强的声音名称生成系统（防止模式检测）
+    -- 音乐控制功能（保持不变）
     local function generateEnhancedSoundName(musicID)
-        local prefixes = {"EngineSound", "vehicleengine", "AmbientTrack", "RadioStream", "EnvironmentSFX"}
-        local suffixes = {"System", ".", "Shutter", "Player", "Source", "Device"}
-        local numbers = {"01", "02", "003", "4", "005"}
+        local prefixes = {"EngineSound", "Vehicleengine", "AmbientTrack", "DEV", "EnvironmentSFX"}
+        local suffixes = {"System", "suffer", "Manager", "Player", "Source", "Device"}
+        local numbers = {"001", "02", "3", "004", "5"}
         return prefixes[math.random(#prefixes)].."_"..suffixes[math.random(#suffixes)].."_"..numbers[math.random(#numbers)]
     end
-    
-    -- 参数验证与清理函数
+
     local function ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
-        -- 清理音乐ID格式
-        musicID = tostring(rawMusicID):gsub("%D+", "")
-        
-        -- 严格长度检查
+        local musicID = tostring(rawMusicID):gsub("%D+", "")
         if #musicID < 6 then
-            return nil
+            return nil, nil, nil
         end
-        
-        -- 使用原始默认值（音量1，音调1）
-        volume = tonumber(rawVolume) or 1
-        pitch = tonumber(rawPitch) or 1
-        
-        return musicID, volume, pitch
+        local volume = tonumber(rawVolume) or 1
+        local pitch = tonumber(rawPitch) or 1
+        return musicID, math.clamp(volume, 0.1, 100), math.clamp(pitch, 0.1, 100)
     end
-    
+
     local function SafeStopSound(soundID)
         local stopped = false
         for _, location in ipairs({workspace, replicatedStorage}) do
@@ -420,7 +375,6 @@ local function CreateFullUI()
         soundSystem.LastSoundName = nil
     end
 
-    -- 增强的播放模式（集成防护措施）
     local function EnhancedMode1_Play(musicID, volume, pitch, loopEnabled)
         if soundSystem.RemoteEvent and not soundSystem.RemoteEvent:IsDescendantOf(game) then
             soundSystem.RemoteEvent = nil
@@ -461,7 +415,6 @@ local function CreateFullUI()
         end
     end
 
-    -- 修改后的遍历模式（M模式）
     local function EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
         local soundName = generateEnhancedSoundName(musicID)
         local playedSuccessfully = false
@@ -480,7 +433,6 @@ local function CreateFullUI()
             return false 
         end
         
-        -- 随机打乱远程事件顺序
         for i = #remoteEvents, 2, -1 do
             local j = math.random(i)
             remoteEvents[i], remoteEvents[j] = remoteEvents[j], remoteEvents[i]
@@ -510,15 +462,13 @@ local function CreateFullUI()
                EnhancedMode2_Play(musicID, volume, pitch, loopEnabled)
     end
     
-    -- ==================== 播放按钮状态反馈系统 ====================
+    -- 播放控制
     local function handlePlayback()
         local rawMusicID = musicIDBox.Text
         local rawVolume = volumeBox.Text
         local rawPitch = pitchBox.Text
         
         local musicID, volume, pitch = ValidateAndCleanParameters(rawMusicID, rawVolume, rawPitch)
-        
-        -- 如果音乐ID无效，直接触发失败状态
         if not musicID then
             playButton.BackgroundColor3 = playButtonFailureColor
             task.delay(0.5, function()
@@ -536,14 +486,12 @@ local function CreateFullUI()
             success = EnhancedAutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
         end
         
-        -- 播放按钮状态颜色反馈
         if success then
             playButton.BackgroundColor3 = playButtonSuccessColor
         else
             playButton.BackgroundColor3 = playButtonFailureColor
         end
         
-        -- 0.5秒后恢复默认颜色
         task.delay(0.5, function()
             playButton.BackgroundColor3 = playButtonDefaultColor
         end)
@@ -559,6 +507,7 @@ local function CreateFullUI()
     
     playButton.MouseButton1Click:Connect(handlePlayback)
     stopButton.MouseButton1Click:Connect(handleStop)
+    
     loopToggle.MouseButton1Click:Connect(function()
         soundSystem.LoopEnabled = not soundSystem.LoopEnabled
         loopToggle.Text = soundSystem.LoopEnabled and "循环: ON" or "循环: OFF"
@@ -566,20 +515,7 @@ local function CreateFullUI()
             Color3.fromRGB(70, 150, 200) or Color3.fromRGB(120, 120, 140)
     end)
 
-    -- ==================== 辉光效果更新循环 ====================
-    local runService = game:GetService("RunService")
-    local connection
-    connection = runService.Heartbeat:Connect(function()
-        GlowEffectController:UpdateGlowEffect(mainFrame)
-    end)
-
-    -- 清理函数
-    screenGui.Destroying:Connect(function()
-        if connection then
-            connection:Disconnect()
-        end
-    end)
-
+    print("✅ 修复版UI已加载 - 所有元素应该正常显示！")
     return screenGui
 end
 
@@ -591,5 +527,5 @@ end)
 if not success then
     warn("❌ UI创建失败: " .. tostring(result))
 else
-    print("✅ 优化版紫色辉光音乐播放器UI已加载！")
+    print("🎵 音乐播放器UI修复完成！")
 end
